Corrections in surface_parameters_kida.uva.2015.in : JCH3C3 -> JC4H3 JHC7H -> JC7H2 Add binding energies for missing species: JC5O, JC6N, JC7O, JC8N, JC9O, JC10N
Replace all input files for chemistry in example_simulation by the ones from kids.uva.2015

--- a/Networks/kida.uva.2015/surface_parameters_kida.uva.2015.in
+++ b/Networks/kida.uva.2015/surface_parameters_kida.uva.2015.in
@@ -73,8 +73,11 @@ JC2H2        26  2587.    0. 0.0e+00 Collings                 *  +54.50
 JC2H3        27  3037.    0. 0.0e+00 C2H2+H                   *  +62.70
 JC2H4        28  3487.    0. 0.0e+00 C2H3+H                   *  +14.60
 JC2H5        29  3937.    0. 0.0e+00 C2H4+H                   *  +28.30
-JC3H         37  2937.    0. 0.0e+00 C2H+C                    * +176.65
-JC3H2        38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jt-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
 JCH2CCH      39  3837.    0. 0.0e+00 C3H2+H                   *  +82.00
 JCH3CCH      40  4287.    0. 0.0e+00 C3H3+H                   *  +47.70
 JC3H5        41  4737.    0. 0.0e+00 C3H4+H                   *  +41.00
@@ -82,7 +85,7 @@ JC3H7        43  5637.    0. 0.0e+00 C3H6+H                   *  +27.00
 JC3H8        44  6087.    0. 0.0e+00 C3H7+H                   *  -25.00
 JC4H         49  3737.    0. 0.0e+00 C3H+C                    * +191.11
 JC4H2        50  4187.    0. 0.0e+00 C4H+H                    * +105.00
-JCH3C3       51  4637.    0. 0.0e+00 C4H2+H                   * +110.66
+JC4H3        51  4637.    0. 0.0e+00 C4H2+H                   * +110.66
 JCH2CHC2H    52  5087.    0. 0.0e+00 C4H3+H                   *  +83.00
 JC4H5        53  5537.    0. 0.0e+00 C4H4+H                   *  +73.00
 JC5H         61  4537.    0. 0.0e+00 C4H+C                    * +225.55
@@ -91,7 +94,7 @@ JCH3C4H      64  5887.    0. 0.0e+00 C5H4                     * +101.00
 JC6H         73  5337.    0. 0.0e+00 C5H+C                    * +243.79
 JC6H2        74  5787.    0. 0.0e+00 C6H+H                    * +155.00
 JC7H         85  6137.    0. 0.0e+00 C6H+C                    * +277.25
-JHC7H        86  6587.    0. 0.0e+00 C7H+H                    * +227.68
+JC7H2        86  6587.    0. 0.0e+00 C7H+H                    * +227.68
 JCH3C6H      88  7487.    0. 0.0e+00 C7H4                     * +135.00
 JC8H         97  6937.    0. 0.0e+00 C7H+C                    * +298.28
 JC8H2        98  7387.    0. 0.0e+00 C8H+H                    * +208.13
@@ -105,9 +108,9 @@ JHSSH        66  3100.    0. 0.0e+00 S2H+H                    *   +4.00
 JCS          44  1900.    0. 0.0e+00 C+S                      *  +65.30
 JHCS         45  2350.    0. 0.0e+00 CS+H                     *  +74.00
 JH2CS        46  2700.    0. 0.0e+00 HCS+H                    *  +28.30
-JCCS         56  2700.    0. 0.0e+00 C+C+S                    * -999.99
-JC3S         68  3500.    0. 0.0e+00 C2S+C                    * -999.99
-JC4S         80  4300.    0. 0.0e+00 C3S+C                    * -999.99
+JCCS         56  2700.    0. 0.0e+00 C+C+S                    *  145.30     /* Kaiser et al. 2002
+JC3S         68  3500.    0. 0.0e+00 C2S+C                    *  135.20     /* Petrie 1996
+JC4S         80  4300.    0. 0.0e+00 C3S+C                    *  182.30     /* M06-2X JC
 JCCO         40  1950.    0. 0.0e+00 CO+C                     *  +64.60
 JC3O         52  2750.    0. 0.0e+00 CCO+C                    *  +94.60
 JH2CCO       42  2200.    0. 0.0e+00 CH2+CO                   *  -10.70
@@ -118,8 +121,8 @@ JHOC         29  3650.    0. 0.0e+00 C+OH                     *  +10.00
 JH2CO        30  2050.    0. 0.0e+00 HCO+H                    *  -25.10
 JHNO         31  2050.    0. 0.0e+00 H+N+O                    *  +26.30
 JHON         31  3650.    0. 0.0e+00 N+OH                     *  +26.30
-JNHNO        45  2850.    0. 0.0e+00 HNO+N                    * -999.99
-JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   * -999.99
+JNHNO        45  2850.    0. 0.0e+00 HNO+N                    *   56.30    /* Baulch 2005 HNNO isomer
+JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   *   22.90    /* Baulch 2005
 JN2H         29  1450.    0. 0.0e+00 N2+H                     *  +76.20
 JCN          26  1600.    0. 0.0e+00 C+N                      * +104.40
 JCCN         38  2400.    0. 0.0e+00 CN+C                     * +133.00
@@ -229,10 +232,16 @@ JC8H4       100  8287.    0. 0.0e+00 C8H3+H                   * +200.00
 JC9H3       111  8637.    0. 0.0e+00 C9H2+H                   * +234.08
 JC9H4       112  9087.    0. 0.0e+00 C9H3+H                   * +200.00
 JC7H2       86   6587.    0. 0.0e+00 C7H+H                    * +227.68
+JC5O        76   4350.    0. 0.0e+00 CO + 4C                  * -999.99
+JC6N        86   5600.    0. 0.0e+00 CN + 5C                  * -999.99
+JC7O       100   5950.    0. 0.0e+00 CO + 6C                  * -999.99
+JC8N       110   7200.    0. 0.0e+00 CN + 7C                  * -999.99
+JC9O       124   7550.    0. 0.0e+00 CO + 8C                  * -999.99
+JC10N      134   8800.    0. 0.0e+00 CN + 9C                  * -999.99
 JCH3CO       43  2650.    0. 0.0e+00 Ruaud et al. (2015)      *   -2.40
 JCH3OCH2     45  3500.    0. 0.0e+00 Ruaud et al. (2015)      *   -0.02
 JCH2NH2      30  5534.    0. 0.0e+00 Ruaud et al. (2015)      *  +35.80
 JCH2NH       29  5534.    0. 0.0e+00 Ruaud et al. (2015)      *  +21.80
 JHCOCO       57  2050.    0. 0.0e+00 Ruaud et al. (2015)      * +21.75
 JHCOCHO      58  2050.    0. 0.0e+00 Ruaud et al. (2015)      *  -56.67
-JHOCO        45  2000.    0. 0.0e+00 Ruaud et al. (2015)      * -999.99
+JHOCO        45  2000.    0. 0.0e+00 Ruaud et al. (2015)      *  -51.9     /* Baulch 2005
