--- a/example_simulation/surface_parameters.in
+++ b/example_simulation/surface_parameters.in
@@ -8,14 +8,28 @@ JH2           2   450.  250. 0.0e+00 Herma, Ebfac=50%         *    0.00
 !JH2             2   500.  347. 0.0e+00                          *    0.00
 !JH2             2   315.  135. 0.0e+00 Katz et al. 1999         *    0.00
 JHe           4   100.    0. 1.2e-01 T&H(p248), dEb=WT(Ar)    *    0.00
-JC           12   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   * +170.00
+!JC           12   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   * +170.00
+JC           12  4000.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
+JC-CH3OH     12  8400.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
+JC-H2O       12  3600.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
+JC-NH3       12 14400.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
+JC-CO2       12  1200.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
+JC-CH4       12   800.    0. 7.5e-04 Ruaud et al. (2015)      * +170.00
 JN           14   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   * +112.50
 JO           16   800.    0. 7.5e-04 TA H2Oice, dEb=WT(H2O)   *  +59.00
+JO-CO        16   400.    0. 7.5e-04 Ruaud et al. (2015)      *  +59.00
 JS           32  1100.    0. 0.0e+00 TA H2Oice                *  +65.70
 JCH          13   925.    0. 0.0e+00 C+(1/4)*(CH4-C)          * +142.00
+JCH-H2O      13  5800.    0. 0.0e+00 Ruaud et al. (2015)      *  +81.00
+JCH-CH3OH    13  5800.    0. 0.0e+00 Ruaud et al. (2015)      * +142.00
+JCH-NH3      13 13470.    0. 0.0e+00 Ruaud et al. (2015)      * +142.00
+JCH-CO2      13  5800.    0. 0.0e+00 Ruaud et al. (2015)      *  +81.00
 JCH2         14  1050.    0. 0.0e+00 C+(2/4)*(CH4-C)          *  +93.20
+JCH2-CO2     14  1050.    0. 0.0e+00 Ruaud et al. (2015)      *  +93.20
 JCH3         15  1175.    0. 0.0e+00 C+(3/4)*(CH4-C)          *  +35.60
+JCH3-CO2     15  1175.    0. 0.0e+00 Ruaud et al. (2015)      *  +35.60
 JCH4         16  1300.    0. 0.0e+00 Herma's suggestion       *  -15.90
+JCH4-CO2     16  1300.    0. 0.0e+00 Ruaud et al. (2015)      *  -15.90
 JOH          17  2850.    0. 0.0e+00 H2O/2                    *   +8.80
 JH2O         18  5700.    0. 0.0e+00 Herma's suggestion       *  -57.10
 JNH          15  2378.    0. 0.0e+00 N+(1/3)*(NH3-N)          *  +85.70
@@ -59,8 +73,11 @@ JC2H2        26  2587.    0. 0.0e+00 Collings                 *  +54.50
 JC2H3        27  3037.    0. 0.0e+00 C2H2+H                   *  +62.70
 JC2H4        28  3487.    0. 0.0e+00 C2H3+H                   *  +14.60
 JC2H5        29  3937.    0. 0.0e+00 C2H4+H                   *  +28.30
-JC3H         37  2937.    0. 0.0e+00 C2H+C                    * +176.65
-JC3H2        38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jt-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
 JCH2CCH      39  3837.    0. 0.0e+00 C3H2+H                   *  +82.00
 JCH3CCH      40  4287.    0. 0.0e+00 C3H3+H                   *  +47.70
 JC3H5        41  4737.    0. 0.0e+00 C3H4+H                   *  +41.00
@@ -91,9 +108,9 @@ JHSSH        66  3100.    0. 0.0e+00 S2H+H                    *   +4.00
 JCS          44  1900.    0. 0.0e+00 C+S                      *  +65.30
 JHCS         45  2350.    0. 0.0e+00 CS+H                     *  +74.00
 JH2CS        46  2700.    0. 0.0e+00 HCS+H                    *  +28.30
-JCCS         56  2700.    0. 0.0e+00 C+C+S                    * -999.99
-JC3S         68  3500.    0. 0.0e+00 C2S+C                    * -999.99
-JC4S         80  4300.    0. 0.0e+00 C3S+C                    * -999.99
+JCCS         56  2700.    0. 0.0e+00 C+C+S                    *  145.30     /* Kaiser et al. 2002
+JC3S         68  3500.    0. 0.0e+00 C2S+C                    *  135.20     /* Petrie 1996
+JC4S         80  4300.    0. 0.0e+00 C3S+C                    *  182.30     /* M06-2X JC
 JCCO         40  1950.    0. 0.0e+00 CO+C                     *  +64.60
 JC3O         52  2750.    0. 0.0e+00 CCO+C                    *  +94.60
 JH2CCO       42  2200.    0. 0.0e+00 CH2+CO                   *  -10.70
@@ -104,8 +121,8 @@ JHOC         29  3650.    0. 0.0e+00 C+OH                     *  +10.00
 JH2CO        30  2050.    0. 0.0e+00 HCO+H                    *  -25.10
 JHNO         31  2050.    0. 0.0e+00 H+N+O                    *  +26.30
 JHON         31  3650.    0. 0.0e+00 N+OH                     *  +26.30
-JNHNO        45  2850.    0. 0.0e+00 HNO+N                    * -999.99
-JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   * -999.99
+JNHNO        45  2850.    0. 0.0e+00 HNO+N                    *   56.30    /* Baulch 2005 HNNO isomer
+JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   *   22.90    /* Baulch 2005
 JN2H         29  1450.    0. 0.0e+00 N2+H                     *  +76.20
 JCN          26  1600.    0. 0.0e+00 C+N                      * +104.40
 JCCN         38  2400.    0. 0.0e+00 CN+C                     * +133.00
@@ -152,7 +169,7 @@ JCCl         47  1900.    0. 0.0e+00 CL+C                     * +104.20
 JCl          35  1100.    0. 0.0e+00 same as S                *  +28.60
 JClO         51  1900.    0. 0.0e+00 CL+O                     *  +24.20
 JCP          43  1900.    0. 0.0e+00 C+P                      * +123.80
-JHCl         36  1550.    0. 0.0e+00 CL+H                     *  -22.00
+JHCl         36  5174.    0. 0.0e+00 Olanrewaju 2011,J.Ph.Ch  *  -22.00
 JHCP         37  2350.    0. 0.0e+00 H+C+P                    *  +51.00
 JHPO         48  2350.    0. 0.0e+00 H+P+O                    *  -12.70
 JN2O         44  2400.    0. 0.0e+00 N+N+O                    *  +20.30
@@ -221,4 +238,10 @@ JC7O       100   5950.    0. 0.0e+00 CO + 6C                  * -999.99
 JC8N       110   7200.    0. 0.0e+00 CN + 7C                  * -999.99
 JC9O       124   7550.    0. 0.0e+00 CO + 8C                  * -999.99
 JC10N      134   8800.    0. 0.0e+00 CN + 9C                  * -999.99
-
+JCH3CO       43  2650.    0. 0.0e+00 Ruaud et al. (2015)      *   -2.40
+JCH3OCH2     45  3500.    0. 0.0e+00 Ruaud et al. (2015)      *   -0.02
+JCH2NH2      30  5534.    0. 0.0e+00 Ruaud et al. (2015)      *  +35.80
+JCH2NH       29  5534.    0. 0.0e+00 Ruaud et al. (2015)      *  +21.80
+JHCOCO       57  2050.    0. 0.0e+00 Ruaud et al. (2015)      * +21.75
+JHCOCHO      58  2050.    0. 0.0e+00 Ruaud et al. (2015)      *  -56.67
+JHOCO        45  2000.    0. 0.0e+00 Ruaud et al. (2015)      *  -51.9     /* Baulch 2005
