--- a/example_simulation/gas_reactions.in
+++ b/example_simulation/gas_reactions.in
@@ -961,7 +961,6 @@ OH         NH2                    NH         H2O                                
 OH         NH2                    O          NH3                                           9.180e-14  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    300  3   935 1  1
 OH         O2H                    O2         H2O                                           1.200e-10  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    300  3   936 1  1
 OH         H2CO                   H          HCOOH                                         2.010e-13  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    300  3   937 1  1
-OH         H2CO                   H2O        HCO                                           1.000e-11  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    300  3   938 1  1
 OH         HOOH                   H2O        O2H                                           2.910e-12  0.000e+00  1.600e+02 2.00e+00 0.00e+00 logn  4     10    300  3   939 1  1
 OH         C2H3                   H2O        C2H2                                          1.000e-10  0.000e+00  0.000e+00 1.25e+00 0.00e+00 logn  4     10    300  3   940 1  1
 NO         CN+                    N          NCO+                                          1.900e-01  8.170e-10  4.110e-01 2.00e+00 0.00e+00 logn  4     10     12  4   941 1  1
@@ -4920,7 +4919,6 @@ H2O        CH3                    OH         CH4                                
 CH2        HCO                    CO         CH3                                           3.000e-11  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  4556 1  1
 CH2        H2CO                   HCO        CH3                                           3.300e-13  0.000e+00  3.270e+03 2.00e+00 0.00e+00 logn  4     10    800  3  4557 1  1
 CH3        H2CO                   HCO        CH4                                           1.340e-15  5.050e+00  1.640e+03 2.00e+00 0.00e+00 logn  4     10    800  3  4558 1  1
-CN         H2CO                   HCN        HCO                                           2.600e-10 -4.700e-01  8.260e+02 2.00e+00 0.00e+00 logn  4     10    800  3  4559 1  1
 H+         C2H6                   H2         H2         C2H3+                              2.800e-09  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  4560 1  1
 H+         C2H6                   H          H2         C2H4+                              1.400e-09  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  4561 1  1
 H2+        C2H6                   H2         H2         C2H4+                              2.350e-09  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  4562 1  1
@@ -5421,7 +5419,6 @@ H          HC6N                   CH2        C5N                                
 C          HC6N                   CCH        C5N                                           3.000e-11  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  5041 1  1
 H          HC8N                   CH2        C7N                                           1.480e-10  0.000e+00  3.590e+03 2.00e+00 0.00e+00 logn  4     10    800  3  5042 1  1
 C          HC8N                   CCH        C7N                                           3.000e-11  0.000e+00  0.000e+00 2.00e+00 0.00e+00 logn  4     10    800  3  5043 1  1
-C          CH3OH                  HCO        CH3                                           3.000e-11 -1.300e+00  2.000e+01 1.40e+00 1.00e+01 logn  4     50    300  3  5044 1  2
 CH         H2O                    H          H2CO                                          2.800e-11 -1.220e+00  1.200e+01 1.60e+00 1.00e+01 logn  4     50    300  3  5045 1  2
 H          CCN                    C          HCN                                           2.000e-10  0.000e+00  0.000e+00 3.00e+00 0.00e+00 logn  4     10    300  3  5046 1  2
 C          HNC                    C          HCN                                           1.600e-10  0.000e+00  0.000e+00 3.00e+00 0.00e+00 logn  4     10    300  3  5047 1  2
@@ -7504,3 +7501,52 @@ GRAIN-     H3+                    GRAIN0     H          H2                      
 GRAIN-     HCO+                   GRAIN0     CO         H                                  1.500e-05  5.000e-01  0.000e+00 1.00e+00 0.00e+00 logn  0  -9999   9999  0  6990 1  1
 XH         XH                     H2                                                       1.000e+00  0.000e-00  0.000e+00 1.00e+00 0.00e+00 logn 10  -9999   9999 10  6991 1  1
 H                                 XH                                                       7.920e-05  5.000e-01  0.000e+00 1.00e+00 0.00e+00 logn 11  -9999   9999 11  6992 1  1
+H2CCO      C                      C2H2       CO                                            3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6993 1  1
+H2CO       C                      CH2        CO                                            3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6994 1  1
+CH3OH      C                      CH3        HCO                                           3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6995 1  1
+CH2NH2     H                      CH2NH      H2                                            3.000E-12  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6996 1  1
+CH2NH2     H                      CH3        NH2                                           1.070E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6997 1  1
+CH2NH2     O                      CH2NH      OH                                            1.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6998 1  1
+CH2NH2     O                      H2CO       NH2                                           1.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  6999 1  1
+CH2NH2     C                      C2H2       NH2                                           3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7000 1  1
+CH2NH2     N                      CH2NH      NH                                            4.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7001 1  1
+CH2NH2     N                      HCN        NH3                                           6.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7002 1  1
+CH2OH      H                      H2CO       H2                                            1.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7003 1  1
+CH2OH      H                      CH3        OH                                            1.600E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7004 1  1
+CH2OH      O                      H2CO       OH                                            1.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7005 1  1
+CH2OH      C                      CH3        CO                                            3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7006 1  1
+CH2OH      N                      H2CO       NH                                            4.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7007 1  1
+CH2OH      N                      HCN        H2O                                           6.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7008 1  1
+CH3O       H                      H2CO       H2                                            3.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7009 1  1
+CH3O       H                      CH3        OH                                            3.000E-12  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7010 1  1
+CH3O       O                      H2CO       OH                                            6.000E-12  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7011 1  1
+CH3O       O                      CH3        O2                                            1.900E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7012 1  1
+CH3O       C                      CH3        CO                                            3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7013 1  1
+CH3O       N                      H2CO       NH                                            1.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7014 1  1
+CH3O       N                      CH3        NO                                            3.000E-11  1.700E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7015 1  1
+CH3OH      CN                     CH3O       HCN                                           6.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7016 1  1
+CH3OH      CN                     CH2OH      HCN                                           6.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7017 1  1
+CH3OH      OH                     CH3O       H2O                                           6.000E-13 -1.200E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7018 1  1
+CH3OH      OH                     CH2OH      H2O                                           3.100E-12  0.000E+00  3.600E+02 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7019 1  1
+CH3OH      CH                     CH3        H2CO                                          2.500E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7020 1  1
+H2CO       CH                     CH3        CO                                            4.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7021 1  1
+H2CO       CN                     HCN        HCO                                           1.000E-11 -4.000E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7022 1  1
+H2CO       OH                     H2O        HCO                                           1.000E-11 -6.000E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7023 1  1
+CH3OCH3    C                      CH3OH      C2H2                                          3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7024 1  1
+CH3OCH2    H                      CH3O       CH3                                           3.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7025 1  1
+CH3OCH2    O                      HCOOCH3    H                                             2.560E-10  1.500E-01  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7026 1  1
+CH3OCH2    N                      CH3O       H2CN                                          3.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7027 1  1
+CH3OCH2    C                      CH3O       C2H2                                          3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7028 1  1
+HCOOCH3    C                      CO         CO         H          CH3                     3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7029 1  1
+HC2O       H                      CH2        CO                                            1.700E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7030 1  1
+HC2O       C                      CCH        CO                                            2.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7031 1  1
+HC2O       O                      H          CO         CO                                 1.600E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7032 1  1
+HC2O       O                      CH         CO2                                           4.900E-11  0.000E+00  5.600E+02 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7033 1  1
+HC2O       N                      HCN        CO                                            6.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7034 1  1
+HC2O       N                      HNC        CO                                            4.000E-11  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7035 1  1
+C          CH3CHO                 C2H4       CO                                            3.000E-10  0.000E+00  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  3  7036 1  1
+HC2O       H3+                    H2CCO+     H2                                            1.000E+00  3.100E-09  2.800E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  4  7037 1  1
+HC2O       H3O+                   H2CCO+     H2O                                           1.000E+00  1.400E-09  2.800E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  4  7038 1  1
+HC2O       HCO+                   H2CCO+     CO                                            1.000E+00  1.300E-09  2.800E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  4  7039 1  1
+HC2O       N2H+                   H2CCO+     N2                                            1.000E+00  1.300E-09  2.800E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  4  7040 1  1
+H2CCO+     H                      CH3+       CO                                            1.000E+00  1.940E-09  0.000E+00 0.00e+00 0.00e+00 logn  4  -9999   9999  5  7041 1  1
