--- a/example_simulation/grain_species.in
+++ b/example_simulation/grain_species.in
@@ -14,6 +14,13 @@ C6H4         0  4  0  6  0  0  0  0  0  0  0  0  0  0
 C7H4         0  4  0  7  0  0  0  0  0  0  0  0  0  0
 C8H4         0  4  0  8  0  0  0  0  0  0  0  0  0  0
 C9H4         0  4  0  9  0  0  0  0  0  0  0  0  0  0
+CH3CO        0  3  0  2  0  1  0  0  0  0  0  0  0  0
+CH3OCH2      0  5  0  2  0  1  0  0  0  0  0  0  0  0
+CH2NH2       0  4  0  1  1  0  0  0  0  0  0  0  0  0
+HCOCO        0  1  0  2  0  2  0  0  0  0  0  0  0  0
+HCOCHO       0  2  0  2  0  2  0  0  0  0  0  0  0  0
+CH3O         0  3  0  1  0  1  0  0  0  0  0  0  0  0
+HOCO         0  1  0  1  0  2  0  0  0  0  0  0  0  0
 JC2H6        0  6  0  2  0  0  0  0  0  0  0  0  0  0
 JC5H4        0  4  0  5  0  0  0  0  0  0  0  0  0  0
 JC6H4        0  4  0  6  0  0  0  0  0  0  0  0  0  0
@@ -219,3 +226,23 @@ JC9O         0  0  0  9  0  1  0  0  0  0  0  0  0  0
 JC6N         0  0  0  6  1  0  0  0  0  0  0  0  0  0
 JC8N         0  0  0  8  1  0  0  0  0  0  0  0  0  0
 JC10N        0  0  0 10  1  0  0  0  0  0  0  0  0  0
+JCH3CO       0  3  0  2  0  1  0  0  0  0  0  0  0  0
+JCH3OCH2     0  5  0  2  0  1  0  0  0  0  0  0  0  0
+JCH2NH2      0  4  0  1  1  0  0  0  0  0  0  0  0  0
+JHCOCO       0  1  0  2  0  2  0  0  0  0  0  0  0  0
+JHCOCHO      0  2  0  2  0  2  0  0  0  0  0  0  0  0
+JC-H2O       0  2  0  1  0  1  0  0  0  0  0  0  0  0
+JC-NH3       0  3  0  1  1  0  0  0  0  0  0  0  0  0
+JC-CO2       0  0  0  2  0  2  0  0  0  0  0  0  0  0
+JC-CH3OH     0  4  0  2  0  1  0  0  0  0  0  0  0  0
+JC-CH4       0  4  0  2  0  0  0  0  0  0  0  0  0  0
+JCH-H2O      0  3  0  1  0  1  0  0  0  0  0  0  0  0
+JCH-CH3OH    0  5  0  2  0  1  0  0  0  0  0  0  0  0
+JCH-CO2      0  1  0  2  0  2  0  0  0  0  0  0  0  0
+JCH2-CO2     0  2  0  2  0  2  0  0  0  0  0  0  0  0
+JCH3-CO2     0  3  0  2  0  2  0  0  0  0  0  0  0  0
+JCH4-CO2     0  4  0  2  0  2  0  0  0  0  0  0  0  0
+JCH-NH3      0  4  0  1  1  0  0  0  0  0  0  0  0  0
+JCH3O        0  3  0  1  0  1  0  0  0  0  0  0  0  0
+JO-CO        0  0  0  1  0  2  0  0  0  0  0  0  0  0
+JHOCO        0  1  0  1  0  2  0  0  0  0  0  0  0  0
