--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ nautilus_trace_major
 example_simulation/*.pdf
 example_simulation/*.reaction
 example_simulation/*.percentage
+example_simulation/selected_output.dat
+example_simulation/selected_output.in
